SERVER-40705: Support yielding converted locks